--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@workerbee/google-sheets",
+  "name": "@kazibee/google-sheets",
   "version": "0.1.0",
   "type": "module",
   "main": "./src/index.ts",
